# program-tray

./: Cargo.toml  README.md
.github/workflows/: rust.yml  tests.yml
src/: app.rs  config.rs  icons.rs  launcher.rs  main.rs  tray.rs
src/ui/: adapter.rs  app.rs  component.rs  icons.rs  mod.rs  terminal.rs  tray.rs
tests/: main.rs
