[package]
name = "program-tray"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.18.2" }
tray-icon = "0.20.0"
muda = "0.16.1"
image = "0.25.6"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
shlex = "1.3"