[package]
name = "program-tray"
version = "0.1.0"
edition = "2021"
description = "Wrap any program in tray for background work"
homepage = "https://github.com/igor-filipenko/program-tray"
repository = "https://github.com/igor-filipenko/program-tray"
categories = ["gui"]

[dependencies]
gtk = { version = "0.18.2" }
tray-icon = "0.20.0"
muda = "0.16.1"
image = "0.25.6"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
shlex = "1.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
